# firecrawl-adapter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/browser/: SKILL.md
.claude/skills/browser/scripts/: _env.sh  browser-login.sh  browser-session-clear.sh  browser-session-show.sh
.claude/skills/deploy/: SKILL.md
.claude/skills/deploy/scripts/: _env.sh  claude-mcp-status.sh  claude-mcp-uninstall.sh  hermes-deploy.sh  hermes-status.sh  hermes-undeploy.sh
.claude/skills/devops/: SKILL.md
.claude/skills/devops/scripts/: _env.sh  check.sh  lint.sh  login.sh  logs.sh  mcp-install.sh  mcp-status.sh  mcp-websearch-allow.sh  mcp-websearch-deny.sh  reload.sh  restart.sh  session-clear.sh  session-show.sh  setup.sh  start.sh  status.sh  stop.sh  test.sh  typecheck.sh
adapter/: __init__.py  __main__.py  config.py  fetcher.py  handlers.py  jobs.py  parser.py  server.py
searxng/: limiter.toml  settings.yml  settings.yml.template
tests/: test_handlers.py  test_parser.py  test_routing.py
