[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockfirecrawl"
version = "5.1.0"
description = "SearXNG → Firecrawl protocol adapter (local, free)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chengshun" }]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "lxml>=4.9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "types-requests",
    "types-beautifulsoup4",
]

[project.scripts]
mockfirecrawl = "adapter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["adapter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "html2text.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
